# fletviewer

./: .gitignore  AGENTS.md  Cargo.toml  FVCORE.md  HACK.md  README.md  SOLITAIRE_LEARN.md  TODO.md  debug_log.md  dev_web.py  main.py  pyproject.toml  requirements.txt  test_scene.py
app/: backend.py  backend_config.py  booru_session.py  browser_session.py  debug_log.py  download_manager.py  gallery_cache.py  gallery_type_colors.py  grid_layout.py  history.py  image_cache.py  image_fetcher.py  image_progress.py  image_proxy.py  image_results.py  lazy.py  local_gallery_manager.py  main.py  navigation.py  notifications.py  pixiv_session.py  platform_storage.py  storage.py  storage_demo.py  theme.py  toast.py  ui_update.py
app/controls/: async_image.py  clickable_masonry.py  masonry_gallery.py  paged_masonry.py  persistent_tabs.py  task_debug_overlay.py
app/views/: booru_pages.py  debug.py  downloads.py  favorites.py  file_manager.py  flet_extension_debug.py  gallery_cards.py  gallery_debug.py  gallery_detail.py  gallery_list.py  history.py  home.py  image_viewer.py  input_test.py  leaderboard.py  local_galleries.py  local_zip_viewer.py  pixiv_home.py  pixiv_pages.py  popular.py  search.py  settings.py  subscriptions.py
core/: __init__.py  atomic_file.py  notification.py  paged_feed.py  sqlite_recovery.py  storage.py  storage_browser.py  storage_migration.py
core/api/: __init__.py  archive.py  backend.py  downloads.py  dto.py  errors.py  images.py  library.py
core/cache/: gallery_cache.py  image_cache_db.py
core/config/: __init__.py  models.py  repository.py
core/data/: __init__.py  data_db.py  history.py
core/download/: local_gallery.py  manager.py
core/image/: __init__.py  fetcher.py  viewer_state.py
core/net/: browser_session.py
core/provider/: __init__.py  booru.py  ehgrabber.py  pixiv.py
core/runtime/: __init__.py  backend_runtime.py
docs/: index.md
docs/flet/controls/: rawimage.md
docs/flet/cookbook/: multiprocessing.md
docs/flet/extend/: user-extensions.md
docs/flet/publish/: android.md
docs/flet/publish/web/static-website/: index.md
docs/flet/studio/: privacy-policy.md  terms-of-service.md  whats-new.md
docs/flet/types/: datachannel.md  datachannelopenevent.md
docs/flet/updates/: release-notes.md
docs/flet/updates/breaking-changes/: index.md
docs/flet/updates/breaking-changes/v0-85-0/: deprecated-drag-target-event-coordinates.md  deprecated-video-apis.md  removed-spacing-border-helpers.md
docs/flet/updates/breaking-changes/v0-86-0/: android-extract-packages.md  android-x86-arch-removed.md  compile-on-by-default.md  (+5 more)
extensions/fletviewer_native/: README.md  mkdocs.yml  pyproject.toml
extensions/fletviewer_native/docs/: FletviewerNative.md  index.md
extensions/fletviewer_native/examples/fletviewer_native_example/: pyproject.toml
extensions/fletviewer_native/examples/fletviewer_native_example/src/: main.py
extensions/fletviewer_native/src/fletviewer_native/: __init__.py  fletviewer_native.py
extensions/fletviewer_native/src/fletviewer_native.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extensions/fletviewer_native/src/flutter/fletviewer_native/: pubspec.yaml
extensions/fletviewer_native/src/flutter/fletviewer_native/lib/: fletviewer_native.dart
extensions/fletviewer_native/src/flutter/fletviewer_native/lib/src/: extension.dart  fletviewer_native.dart
fvcore/: .gitignore  Cargo.toml  README.md  config.json
fvcore/FletViewer/Data/: fvcore.redb
fvcore/src/: archive.rs  config.rs  control.rs  error.rs  gallery.rs  id.rs  image.rs  lib.rs  main.rs  operation.rs  operation_service.rs  runtime.rs  session.rs  snapshot.rs  storage.rs  webui.css  webui.rs
fvcore/src/provider/: booru.rs  eh.rs  mod.rs  pixiv.rs
fvcore/tests/fixtures/danbooru/: posts.json
fvcore/tests/fixtures/eh/: api_imagedispatch.json  api_showpage.json  archive_intermediate.html  archive_options.html  archive_submitted.html  gallery_detail.html  home_compact.html  image_mpv.html  image_showkey.html  thumbnails.html
fvcore/tests/fixtures/gelbooru/: posts.json
fvcore/tests/fixtures/pixiv/: illust.json  pages.json
lib/cache/: __init__.py  gallery_cache.py
lib/data/: data_db.py
lib/download/: __init__.py  local_gallery.py  manager.py
lib/image/: fetcher.py
lib/net/: __init__.py  browser_session.py
lib/provider/: ehgrabber.py
scripts/: dev_web.py
tests/: manual_booru_smoke.py  test_async_image.py  test_atomic_file.py  test_backend_api.py  test_backend_config.py  test_backend_runtime.py  test_booru_provider.py  test_browser_session.py  test_clickable_masonry.py  test_debug_log.py  test_download_manager.py  test_download_task_service.py  test_eh_account.py  test_eh_archive_service.py  test_gallery_cache.py  test_gallery_cache_adapter.py  test_gallery_detail_layout.py  test_image_cache.py  test_image_cache_recovery.py  test_image_fetcher.py  test_image_progress.py  test_image_results.py  test_image_task_service.py  test_image_viewer.py  test_import_side_effects.py  test_library_service.py  test_local_gallery_recovery.py  test_local_zip_viewer.py  test_main_navigation.py  test_navigation.py  test_notifications.py  test_paged_feed.py  test_persistent_tabs.py  test_pixiv_provider.py  test_platform_storage.py  test_proxy.py  test_search_context.py  test_settings.py  test_sqlite_recovery.py  test_storage.py  (+5 more)
tmp/: README.md  patch_bottom_nav_compact.py  patch_extra_nav.py  patch_provider_avatar.py
tmp/docs/: challenge_backend_notes.md
tmp/lib/: __init__.py
tmp/lib/booru/: README.md  __init__.py  factory.py  transport.py
tmp/lib/booru/data/: __init__.py  models.py
tmp/lib/booru/providers/: __init__.py  _base.py  danbooru.py  gelbooru.py  gelbooru_alike.py  moebooru.py
tmp/lib/challenge/: __init__.py  browser_cache.py  camoufox_solver.py
tmp/probes/: cached_access_probe.py  camoufox_cookie_probe.py  camoufox_danbooru_probe.py  challenge_cache_probe.py  curl_cffi_danbooru_probe.py  danbooru_probe.ipynb  eh_forum_challenge_probe.py
