[project]
name = "fletviewer"
version = "0.1.0"
description = "Anime Provider viewer (EHentai/Booru/Pixiv) built with Flet"
requires-python = ">=3.10"
dependencies = [
    "flet==0.85.3",
    "requests",
    "beautifulsoup4",
    "lxml",
    "pathvalidate",
    "Pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]
namespaces = true

[project.optional-dependencies]
web = [
    "flet-web==0.85.3",
]

[tool.flet.app]
path = "."
module = "main"
exclude = [
    "tests",
    "FletViewer",
    "build",
    ".git",
    ".cache",
    "tmp",
    "*.ipynb",
    "debug_log.md",
    "scripts",
    "fvcore",
    "target",
    "Cargo.toml",
    "Cargo.lock",
    "core/provider/eh_grabber.js",
    "storage_demo.py",
]

[tool.flet]
product = "FletViewer"
org = "io.fletviewer"
company = "FletViewer"
copyright = "Copyright (C) 2026 FletViewer"

[tool.flet.android]
org = "io.fletviewer"
split_per_abi = true
target_arch = ["arm64-v8a"]

[tool.flet.android.permission]
"android.permission.INTERNET" = true

