[package]
name = "fvcore"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
description = "Pure Rust application core for FletViewer and other frontends"
repository = "https://github.com/zincles/fletviewer"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["form", "http1", "json", "query", "tokio"] }
async-stream = "0.3"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
md-5 = "0.10"
regex = "1.11"
redb = "2.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
thiserror = "2.0"
tl = "0.7"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.16", features = ["serde", "v7"] }
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.20"
