[project]
name = "fletviewer-native"
version = "0.1.0"
description = "Native Flutter controls for FletViewer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet==0.85.3",
]

[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/fletviewer-native"
Repository = "https://github.com/MyGithubAccount/fletviewer-native"
Issues = "https://github.com/MyGithubAccount/fletviewer-native/issues"

[tool.setuptools.package-data]
"flutter.fletviewer_native" = ["**/*"]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
