[project]
name = "fletviewer-native-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "fletviewer-native",
    "flet>=0.85.3",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "fletviewer-native-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
fletviewer-native = "../.." # relative path

[tool.uv.sources]
fletviewer-native = { path = "../..", editable = true }
